; ModuleID = '/home/carl/AnghaBench/redis/src/extr_object.c_isSdsRepresentableAsLongLong.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_object.c_isSdsRepresentableAsLongLong.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@C_OK = common dso_local global i32 0, align 4
@C_ERR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @isSdsRepresentableAsLongLong(i32 %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64*, align 8
  store i32 %0, i32* %3, align 4
  store i64* %1, i64** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @sdslen(i32 %6)
  %8 = load i64*, i64** %4, align 8
  %9 = call i64 @string2ll(i32 %5, i32 %7, i64* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @C_OK, align 4
  br label %15

13:                                               ; preds = %2
  %14 = load i32, i32* @C_ERR, align 4
  br label %15

15:                                               ; preds = %13, %11
  %16 = phi i32 [ %12, %11 ], [ %14, %13 ]
  ret i32 %16
}

declare dso_local i64 @string2ll(i32, i32, i64*) #1

declare dso_local i32 @sdslen(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
